<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CounterResultFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/counter_result_good_luck"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_play_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/counter_result_play_again" />

    <Button
        android:id="@+id/button_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/counter_back_to_lesson" />

</LinearLayout>